[package]
name = "salvo-api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "^0"
tokio = { version = "^1", features = ["macros"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
chrono = "^0"
